--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ where (
               Aplicación de ejemplo: <a href="http://www.nardoz.com/mapa-cultura">Mapa-cultural</a>
             </li>
             <li>
-              Repo en github: <a href="https://github.com/Nardoz/mapa-cultura">https://github.com/opensas/cartodb-demo</a>
+              Repo en github: <a href="https://github.com/Nardoz/mapa-cultura">https://github.com/Nardoz/mapa-cultura</a>
             </li>
           </ul>
 
