--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <li>La tierra es esférica, pero nuestros mapas no...</li>
             <li class="fragment">Una proyección define un sistema completo de referencia geoespacial.</li>
             <li class="fragment">Establece cómo se proyectan los puntos de la superficie esférica de la tierra a un mapa plano</li>
-            <li class="fragment">Provee sentido geoespacial a lo que otra manera sería tan sólo un par de números sin significado.</li>
+            <li class="fragment">Provee sentido geoespacial a lo que de otra manera sería tan sólo un par de números sin significado.</li>
           </ul>
         </section>
 
